--- a/index/static/style.css
+++ b/index/static/style.css
@@ -67,8 +67,8 @@ body {
 /* MULTI BAR */
 #multi-bar {
   overflow: hidden;
-  height: 200px;
-   margin-left: -50px;
+  margin-top: 56px;
+  margin-left: -50px;
   margin-right: -50px;
   -webkit-box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.5);
   -moz-box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.5);
@@ -85,7 +85,7 @@ body {
   list-style: none;
 }
 #search-bar {
-  padding: 70px;
+
 }
 #browse-bar {
 
@@ -98,23 +98,24 @@ body {
 }
 
 #stage.open {
-  height: calc(100vh - 200px);
-  height: -o-calc(100vh - 200px); /* opera */
-  height: -webkit-calc(100vh - 200px); /* google, safari */
-  height: -moz-calc(100vh - 200px); /* firefox */
-  overflow-y: scroll;
-  padding-top: 40px;
+  height: calc(100vh - 126px);
+  height: -o-calc(100vh - 126px); /* opera */
+  height: -webkit-calc(100vh - 126px); /* google, safari */
+  height: -moz-calc(100vh - 126px); /* firefox */
+  padding-top: 56px;
 }
 
 #bar.extended{
-  top: calc(-100vh + 200px);
-  top: -o-calc(-100vh + 200px); /* opera */
-  top: -webkit-calc(-100vh + 200px); /* google, safari */
-  top: -moz-calc(-100vh + 200px); /* firefox */
+  top: calc(-100vh + 126px);
+  top: -o-calc(-100vh + 126px); /* opera */
+  top: -webkit-calc(-100vh + 126px); /* google, safari */
+  top: -moz-calc(-100vh + 126px); /* firefox */
 }
 
 #stage {
   overflow: hidden;
+  margin-left: -50px;
+  margin-right: -50px;
 }
 
 #search-form {
@@ -122,22 +123,24 @@ body {
 }
 #search-field {
   width: 400px;
+  margin: 0px;
+  padding: .75rem 1rem;
 }
 #search-button {
   position: absolute;
-  left: 354px;
-  top: 4px;
+  left: 340px;
+  top: 16px;
   z-index: 50;
   border-radius: 20px;
   height: 38px;
   width: 38px;
 }
 #q {
- border-radius: 22px;
- padding: .75rem 1rem;
- -webkit-box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.5);
- -moz-box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.5);
- box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.5);
+  border-radius: 22px;
+  padding: .75rem 1rem;
+  -webkit-box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.5);
+  -moz-box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.5);
+  box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.5);
 }
 
 #alphabet {
@@ -237,13 +240,7 @@ a, a:hover {
 
 /* PLAYER */
 #player {
-  position: fixed;
-  bottom: 0;
-  z-index: 98;
-}
 
-#player-bar {
-  padding-top: 3px;
 }
 
 #overlay {
@@ -264,6 +261,5 @@ a, a:hover {
 
 }
 #footer {
-  margin-top: 15px;
   text-align: center;
 }
