--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -21,5 +21,9 @@ dopepod
     {% block results %}
     {% endblock %}
   </div>
+  <!-- CHARTS -->
+  <div class="row" id="charts">
+    {% include 'index/charts.html' %}
+  </div>
 </div>
 {% endblock %}
