--- a/index/templates/index/results_detail.html
+++ b/index/templates/index/results_detail.html
@@ -5,6 +5,7 @@ dopepod
 {% endblock %}
 
 {% block results %}
+{% if podcasts %}
 <div class="col" id="results-wrapper">
   {% if search %}
     <form id="result-form" method="GET" action="{% url 'search' %}">
@@ -14,45 +15,45 @@ dopepod
     {% include 'optionsbar.html' %}
   </form>
   <div class="row">
-    {% if podcasts %}
-      {% for podcast in podcasts %}
-        <div class="col-lg-2 col-md-3 col-sm-4 col-6 result-box">
-          <form id="sub-form" action="{% url 'subscribe' %}"
-          id="{{ podcast.itunesid }}" method="POST">
-            {% csrf_token %}
-            <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
-            {% if podcast.subscribed %}
-            <button type="submit" class="btn btn-outline-primary active sub-button">
-            Unsubscribe
-            {% else %}
-            <button type="submit" class="btn btn-outline-primary sub-button">
-            Subscribe
-            {% endif %}
-            </button>
-          </form>
-          <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}">
-            <img class="img-fluid result-image" src="{{ podcast.artworkUrl }}200x200bb.jpg" />
+    {% for podcast in podcasts %}
+      <div class="col-lg-2 col-md-3 col-sm-4 col-6 result-box">
+        <form id="sub-form" action="{% url 'subscribe' %}"
+        id="{{ podcast.itunesid }}" method="POST">
+          {% csrf_token %}
+          <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
+          {% if podcast.subscribed %}
+          <button type="submit" class="btn btn-outline-primary active sub-button">
+          Unsubscribe
+          {% else %}
+          <button type="submit" class="btn btn-outline-primary sub-button">
+          Subscribe
+          {% endif %}
+          </button>
+        </form>
+        <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}">
+          <img class="img-fluid result-image" src="{{ podcast.artworkUrl }}200x200bb.jpg" />
+        </a>
+        <h6 class="result-title">
+          <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}" title="{{ podcast.title }}">
+            {{ podcast.title }}
           </a>
-          <h6 class="result-title">
-            <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}" title="{{ podcast.title }}">
-              {{ podcast.title }}
-            </a>
-          </h6>
-          <p class="result-artist">
-            <span>by </span>
-            <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}" title="{{ podcast.artist }}">
-              {{ podcast.artist }}
-            </a>
-          </p>
-        </div>
-      {% endfor %}
-    {% else %}
-      <div class="col">
-        <p>
-          No results :p
+        </h6>
+        <p class="result-artist">
+          <span>by </span>
+          <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}" title="{{ podcast.artist }}">
+            {{ podcast.artist }}
+          </a>
         </p>
       </div>
-    {% endif %}
+    {% endfor %}
   </div>
 </div>
+{% else %}
+<div class="col" id="results-wrapper">
+  {% include 'optionsbar.html' %}
+  <p>
+    No results :p
+  </p>
+</div>
+{% endif %}
 {% endblock %}
