--- a/index/templates/index/subscriptions.html
+++ b/index/templates/index/subscriptions.html
@@ -5,33 +5,34 @@ dopepod
 {% endblock %}
 
 {% block results %}
-<div class="col">
+{% if subscriptions %}
+<div class="col" id="results-wrapper">
   <form id="result-form" method="GET" action="{% url 'subscriptions' %}">
     {% include 'optionsbar.html' %}
   </form>
   <div class="row" id="subscriptions-list">
-    {% if subscriptions %}
-      <div class="col">
-        {% for subscription in subscriptions %}
-          <div class="row">
-            <a class="col show-podinfo sub-box" data-itunesid="{{ subscription.itunesid }}" href="{% url 'podinfo' itunesid=subscription.itunesid %}">
-              <h6>
-                {{ subscription.title }}
-              </h6>
-              <p>
-                {{ subscription.last_updated }}
-              </p>
-            </a>
-          </div>
-        {% endfor %}
-      </div>
-    {% else %}
-      <div class="col">
-        <p>
-          No results :p
-        </p>
-      </div>
-    {% endif %}
+    <div class="col">
+      {% for subscription in subscriptions %}
+        <div class="row">
+          <a class="col show-podinfo sub-box" data-itunesid="{{ subscription.itunesid }}" href="{% url 'podinfo' itunesid=subscription.itunesid %}">
+            <h6>
+              {{ subscription.title }}
+            </h6>
+            <p>
+              {{ subscription.last_updated }}
+            </p>
+          </a>
+        </div>
+      {% endfor %}
+    </div>
   </div>
 </div>
+{% else %}
+<div class="col" id="results-wrapper">
+  {% include 'optionsbar.html' %}
+  <p>
+    No results :p
+  </p>
+</div>
+{% endif %}
 {% endblock %}
