--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -1,14 +1,18 @@
 <div class="col-auto">
-  <img src="{{ episode.artwork }}100x100bb.jpg" />
+  <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}">
+    <img src="{{ podcast.artworkUrl }}100x100bb.jpg" />
+  </a>
 </div>
 <div class="col">
   <div class="row">
     <div class="col">
-      <h6>
-        {{ episode.podcast }}
-      </h6>
+      <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}">
+        <h6>
+          {{ podcast.title }}
+        </h6>
+      </a>
       <p>
-        {{ episode.title }} | {{ episode.date }}
+        {{ title }} | {{ date }}
       </p>
     </div>
     <div class="col-auto">
@@ -20,7 +24,7 @@
   <div class="row">
     <div class="col">
       <audio controls preload="metadata" autoplay>
-        <source src="{{ episode.url }}" type="{{ episode.type }}"/>
+        <source src="{{ url }}" type="{{ type }}"/>
       </audio>
     </div>
   </div>
