--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -6,9 +6,9 @@ dopepod
 
 {% block content %}
 <!-- MULTI BAR -->
-<div class="container sticky-top" id="bar">
-  <div class="row" id="stage">
-    
+<div class="container-fluid sticky-top extended" id="bar">
+  <div class="row open" id="stage">
+
   </div>
   <div class="row color" id="multi-bar">
     {% include 'multibar.html' %}
