--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -8,7 +8,8 @@ dopepod
 <!-- MULTI BAR -->
 <div class="container-fluid sticky-top extended" id="bar">
   <div class="row open" id="stage">
-
+  {% block stage %}
+  {% endblock %}
   </div>
   <div class="row" id="multi-bar-scroll">
     {% include 'multibar.html' %}
@@ -20,6 +21,7 @@ dopepod
   <div class="row" id="results">
     {% block results %}
     {% endblock %}
+    {% include 'episodes.html' %}
   </div>
   <!-- CHARTS -->
   <div class="row" id="charts">
