--- a/index/templates/index/results_detail.html
+++ b/index/templates/index/results_detail.html
@@ -14,7 +14,7 @@ dopepod
   {% endif %}
     {% include 'optionsbar.html' %}
   </form>
-  <div class="row">
+  <div class="row results-row">
     {% for podcast in podcasts %}
       <div class="col-lg-2 col-md-3 col-sm-4 col-6 result-box">
         <form id="sub-form" action="{% url 'subscribe' %}"
