--- a/index/templates/ajax.html
+++ b/index/templates/ajax.html
@@ -1,7 +1,8 @@
 {% block content %}
 {% endblock %}
+{% block stage %}
+{% endblock %}
 {% block results %}
 {% endblock %}
 {% block account %}
 {% endblock %}
-
