--- a/podcasts/templates/episodes.html
+++ b/podcasts/templates/episodes.html
@@ -1,60 +1,46 @@
 {% if episodes %}
-<div class="col">
-  <table class="table table-bordered table-hover">
-    <caption>List of podcast episodes</caption>
-    <thead>
-      <tr>
-        <td>
-          Episode
-        </td>
-        <td>
-          Released
-        </td>
-        <td>
-          Length
-        </td>
-        <td>
-          Play
-        </td>
-        <td>
-          Download
-        </td>
-      </tr>
-    </thead>
-    <tbody>
-    {% for episode in episodes %}
-      <tr data-toggle="tooltip" title="{{ episode.summary }}">
-        <td>
-          {{ episode.title }}
-        </td>
-        <td>
-          {{ episode.pubDate }}
-        </td>
-        <td>
-          {{ episode.length }}
-        </td>
-        <td>
-          <form class="play" action="{% url 'play' %}" method="POST" target="_blank">
-            <!-- ADDTL episode INFO HERE -->
-            {% csrf_token %}
-            <input type="hidden" name="url" value="{{ episode.url }}">
-            <input type="hidden" name="type" value="{{ episode.type }}">
-            <input type="hidden" name="title" value="{{ episode.title }}">
-            <input type="hidden" name="date" value="{{ episode.pubDate }}">
-            <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
-            <button class="btn btn-outline-primary" type="submit">
-              Play
+<div class="col" id="episodes-wrapper">
+  <div id="exampleAccordion" data-children=".item">
+  {% for episode in episodes %}
+    <div class="item">
+      <a data-toggle="collapse" data-parent="#exampleAccordion" href="#exampleAccordion{{ forloop.counter }}" aria-expanded="false" aria-controls="exampleAccordion{ forloop.counter }}">
+        <div class="row">
+          <div class="col">
+            {{ episode.title }}
+          </div>
+          <div class="col-auto">
+            {{ episode.pubDate }}
+          </div>
+          <div class="col-auto">
+            {{ episode.length }}
+          </div>
+          <div class="col-auto">
+            <form class="play" action="{% url 'play' %}" method="POST" target="_blank">
+              {% csrf_token %}
+              <input type="hidden" name="url" value="{{ episode.url }}">
+              <input type="hidden" name="type" value="{{ episode.type }}">
+              <input type="hidden" name="title" value="{{ episode.title }}">
+              <input type="hidden" name="date" value="{{ episode.pubDate }}">
+              <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
+              <button class="btn btn-outline-primary" type="submit">
+                Play
+              </button>
+            </form>
+          </div>
+          <div class="col-auto">
+            <button class="btn btn-outline-primary">
+              Download
             </button>
-          </form>
-        </td>
-        <td>
-          <a class="btn btn-outline-primary" href="{{ episode.url }}">
-            Download
-          </a>
-        </td>
-      </tr>
-    {% endfor %}
-    </tbody>
-  </table>
+          </div>
+        </div>
+      </a>
+      <div id="exampleAccordion{{ forloop.counter }}" class="collapse" role="tabpanel">
+        <p class="mb-3">
+          {{ episode.summary }}
+        </p>
+      </div>
+    </div>
+  {% endfor %}
+  </div>
 </div>
 {% endif %}
