--- a/podcasts/templates/podinfo.html
+++ b/podcasts/templates/podinfo.html
@@ -4,12 +4,12 @@
 {{ podcast.title }}
 {% endblock %}
 
-{% block results %}
+{% block stage %}
 <div class="col-sm-3">
 
 </div>
-<div class="col-sm-6" id="podinfo">
-  <div class="row">
+<div class="col-sm-6" >
+  <div class="row" id="podinfo">
     <!-- PODINFO -->
     <div class="col-sm-3">
       <img src="{{ podcast.artworkUrl }}200x200bb.jpg" />
